Fix RadioGroup spacing

--- a/components/forms/RadioGroup/style.module.scss
+++ b/components/forms/RadioGroup/style.module.scss
@@ -12,7 +12,7 @@
   &__li {
     display: flex;
     align-content: flex-start;
-    margin-bottom: $space-s;
+    margin-bottom: $space-xs;
   }
 
   &--row &__li {
